# yat

./: .env.sample  Cargo.toml  README.md
src/: cli.rs  main.rs
src/api/: client.rs  edit_request.rs  error.rs  mod.rs  payment_address.rs
src/api/tests/: create_payment_address.rs  fetch_payment_addresses.rs  mod.rs
src/base/: currency.rs  emoji.rs  mod.rs  yat.rs
src/settings/: error.rs  loader.rs  mod.rs  settings_reader.rs
