[package]
name = "yat"
version = "0.1.0"
edition = "2021"
authors = ["Martins Erts <martins.erts@gmail.com>"]
description = "Yat payment addresses"
homepage = "https://github.com/Krakaw/yat-challenge"
repository = "https://github.com/martinserts/yat"
readme = "README.md"

[dependencies]
clap = { version = "4.0", features = [ "derive" ] }
dotenv = "0.15"
env_logger = "0.9"
httpmock = "0.6"
lazy_static = "1.4"
log = "0.4"
mockall = "0.11"
num-traits = "0.2"
percent-encoding = "2.2"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
unicode-normalization-alignments = "0.1"
